# xekmd-backports

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  README.md  SECURITY.md  aclocal.m4  backport-release.py  backport.sh  compile.sh  config  config.json  configure  configure.ac  copy-list  copy-list.hwsim  dependencies  gentree.py  series  setup-worktree.sh  sync-workflow.sh  test.txt
.devcontainer/: Dockerfile
.github/: TESTING.txt  TEST_V6.17.txt
.github/workflows/: auto-tag.yml  bat_trigger.yaml  bat_trigger.yml  blank.yml  build.yml  build_publish_container.yml  create.yml  review-checks.yml
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.3
autotools/: Makefile  Makefile.am  README  README.md  compile.sh  configure.ac
autotools/debian/: changelog.in
autotools/m4/: anon_inode_getfile_fmode.m4  bin_attribute.m4  bitfiled.m4  class_devnode_const.m4  cleanup.m4  cleanup_guard_cond.m4  client_id.m4  configfs.m4  counted_by.m4  dev_pagemap_ops_folio_free.m4  dma_fence.m4  dma_fence_check_and_signal_locked.m4  dma_fence_is_later.m4  dma_resv.m4  drm_buddy.m4  drm_dev_wedged.m4  drm_device_huge_mnt.m4  drm_drv.m4  drm_dumb_buffers.m4  drm_file.m4  drm_gpuva_op.m4  drm_gpuvm.m4  drm_pagemap.m4  drm_print.m4  drm_workqueue_release.m4  drv_date.m4  enforce_cache_coherency.m4  eventfd_signal.m4  export_symbol_for_modules.m4  fd_file.m4  folio.m4  follow_pfnmap.m4  for_each_if.m4  for_each_or_bit.m4  genmask.m4  hrtimer_setup.m4  ida_find_first_ida_exists.m4  iommu_paging_domain_alloc.m4  iommufd_device_pasid.m4  iova_bitmap_symbols.m4  (+36 more)
backport/: .gitignore  Kconfig.integrate  Kconfig.package  Kconfig.sources  Makefile  Makefile.kernel  Makefile.real
backport/compat/: Kconfig  Makefile  anon_inodes.c  dma-fence-array.c  dma-fence.c  drm_drv.c  drm_dumb_buffers.c  drm_gpuvm.c  drm_gpuvm_madvise.c  drm_managed.c  drm_print.c  gup.c  hrtimer.c  idr.c  iommu.c  iov.c  iova_bitmap.c  main.c  match_token_uuid.c  memory.c  msi_api.c  pci-rebar.c  pgtable-generic.c  ptrace.c  shmem.c  vsec.c
backport/defconfigs/: b43  b43legacy  brcmsmac  wifi  xe
backport/kconf/: zconf.y
backport/scripts/: backport-mkdebcopyright  backport-mkdrmdkmsconf  backport-mkxedebdkms
debian/: package.postinst.in  package.postrm.in
devel/: backports-update-manager  ckmake  git-tracker.py  pycocci
devel/doc/: kconfig-operation  makefile-operation
lib/: bpar.py  bpgit.py  bpreqs.py  kconfig.py
m4/: SYSFS_GROUP_VISIBLE.m4  access_remote_vm.m4  ctl_table_const.m4  devcoredump.m4  disable_work_sync.m4  div_u64_round-up.m4  dma_fence_array.m4  drm_buddy.m4  drm_coredump.m4  drm_dev_wedged.m4  drm_drv.m4  drm_exec.m4  drm_print.m4  drm_workqueue_release.m4  drv_date.m4  free_attribute.m4  fs.m4  hrtimer_setup.m4  jiffies.m4  kernel_single_target.m4  kmap_local.m4  match_token_uuid.m4  pci.m4  perf_event.m4  vendor_specific.m4  workqueue.m4  xe.m4
patches/: 0001-Add-DRM-GPUVM-symbol-renaming-for-kernel-6.6-compati.patch  0001-Add-__assign_str-macro-gets-the-length-of-string.patch  0001-Add-conditional-guard-support-in-existing-guards-wit.patch  0001-Add-drm_pagemap_put-pointer-to-a-drm_pagemap-object.patch  0001-Add-get_region_info_caps-compatibility-for-older-ker.patch  0001-Add-huge_mnt-member-to-inline-drm_gem_huge_mnt_creat.patch  0001-Add-is_visible-member-compatibility-for-older-kernel.patch  0001-Don-t-use-match_token_uuid-for-6.6-kernel.patch  0001-Fix-class-devnode-prototype-mismatch.patch  0001-Fix-module-symbols-import-issue.patch  0001-Handle-__dma_fence_is_later-prototype-change.patch  0001-Include-nospec-header-for-array_index_nospec.patch  0001-Introduce-ACQUIRE-and-ACQUIRE_ERR-for-conditional-lo.patch  0001-PATCH-drm-xe-pf-Handle-VF-BAR-resize-without-PCI-VF-.patch  0001-Revert-drm-xe-Drop-GuC-submit_wq-pool.patch  0001-Use-const-keyword-for-struct-ctl_table-for-above-6.1.patch  0001-Use-register_shrinker-instead-of-shrinker_register-f.patch  0001-autotools-m4-Use-shmem_writepage-instead-of-shmem_wr.patch  0001-autotools-m4-manage-DRIVER_DATE-availability.patch  0001-autotools-m4-manage-MODULE_IMPORT_NS-prototype-chang.patch  0001-autotools-m4-manage-origin-member-availability-in-st.patch  0001-autotools-m4-manage-shrinker-API-changes-from-old-to.patch  0001-disable-dependancy-on-PAGE_SIZE_4KB-config.patch  0001-drivers-drm-disable-display-by-default-for-xe-oot-module.patch  0001-drm-pagemap-folio_free-migrate_device_pfns-compat.patch  0001-drm-pagemap-guard-drm_pagemap_put-definition-against.patch  0001-drm-pagemap-shrinker-API-compat.patch  0001-drm-pagemap-vma_alloc_folio-5args-on-older.patch  0001-drm-pagemap-zone_device_page_init-1arg-on-older.patch  0001-drm-sched-include-util_macros.patch  0001-drm-sched-use-system_highpri_wq-when-percpu-absent.patch  0001-drm-ttm-Add-BACKPORT_MOD_VERSIONS-for-oot-module.patch  0001-drm-xe-Add-support-for-free-cleanup-attribute-detect.patch  0001-drm-xe-bo-guard-drm_mode_size_dumb.patch  0001-drm-xe-build-xe_gen_wa_oob-with-gnu11.patch  0001-drm-xe-include-find.h-header-for-5.15.patch  0001-drm-xe-include-find.h-in-xe_guc_db_mgr.c.patch  0001-drm-xe-pci_rebar-3args-on-older-kernels.patch  0001-drm-xe-pf-Handle-VF-BAR-resize-without-PCI-VF-REBAR-.patch  0001-drm-xe-pf-handle-vf-bar-resize-without-pci-vf-rebar-helpers.patch  (+49 more)
patches/0003-cfg80211-wext-padding/: include_net_cfg80211.patch  net_wireless_core.patch
patches/0010-add-wext-handlers-to-netdev/: net_wireless_core.patch
patches/0013-fix-makefile-includes/: cfg80211.patch  mt76.patch  r8188eu.patch  wcn36xx.patch  wilc1000.patch  wireless.patch
patches/0028-select_queue/: mac80211.patch  mwifiex.patch  r8188eu.patch  rtl8723bs.patch
patches/0089-unknown-dmi/: brcmfmac.patch  mwifiex.patch
patches/0094-ndo-tx-timeout/: orinoco.patch  usbnet.patch
patches/0095-spi-delay/: libertas.patch  wilc1000.patch
src/: .config  .kernel_autoconf_md5  .kernel_config_md5  Kconfig.kernel  Kconfig.local  Kconfig.sources  Kconfig.versions  MAINTAINERS  Makefile  Makefile.kernel  local-symbols  local-symbols-autoconf  versions
src/compat/: Kconfig  (+6 more)
(+1613 files in other folders)
